# production_entry_app

./: MANIFEST.in  README.md  inspect_pp.py  pyproject.toml  setup.py  tmp_debug_pp2.py  tmp_test_roll.py
production_entry/: hooks.py  modules.txt
production_entry/production_entry/: setup_custom_fields.py
production_entry/production_entry/doctype/production_entry/: production_entry.json  production_entry.py
production_entry/production_entry/doctype/production_entry_item/: production_entry_item.json  production_entry_item.py
production_entry/production_entry/doctype/roll_production_entry/: roll_production_entry.js  roll_production_entry.json  roll_production_entry.py
production_entry/production_entry/doctype/roll_production_entry_item/: roll_production_entry_item.json  roll_production_entry_item.py
production_entry/production_entry/doctype/shaft_production_run/: shaft_production_run.js  shaft_production_run.json  shaft_production_run.py
production_entry/production_entry/doctype/shaft_production_run_item/: shaft_production_run_item.json  shaft_production_run_item.py
production_entry/production_entry/doctype/shaft_production_run_job/: shaft_production_run_job.json  shaft_production_run_job.py
production_entry/production_entry/doctype/unit_capacity/: unit_capacity.json  unit_capacity.py
production_entry/production_entry/workspace/production_entry/: production_entry.json
production_entry/public/js/: production_entry.js
