[project]
name = "production_entry"
authors = [
    { name = "Admin", email = "admin@example.com"}
]
description = "Production Entry App"
requires-python = ">=3.10"
version = "0.0.5"
dependencies = []

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
